kustomize/back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dobrodelen-back
  labels:
    app: dobrodelen-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dobrodelen-back
  template:
    metadata:
      labels:
        app: dobrodelen-back
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: dobrodelen-back-persistent-storage
          emptyDir: {}
      containers:
        - name: dobrodelen-back
          image: dobrodelen-back
          volumeMounts:
            - name: dobrodelen-back-persistent-storage
              mountPath: /pvc
          command:
            - gunicorn
            - dobrodelen.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "90"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 500Mi
              cpu: 250m
            limits:
              memory: 500Mi
              cpu: 250m
        - name: dobrodelen-back-nginx
          image: nginx:alpine
          volumeMounts:
            - name: dobrodelen-back-persistent-storage
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 100m
