kustomize/back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dobrodelen-back
spec:
  selector:
    app: dobrodelen-back
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: dobrodelen-back-nginx
spec:
  selector:
    app: dobrodelen-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
