kustomize/back/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dobrodelen-back-enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://api.dobrodelen.si"
      - "https://dobrodelen.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dobrodelen-back
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.dobrodelen.si
      secretName: dobrodelen-back-tls
  rules:
    - host: api.dobrodelen.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dobrodelen-back
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dobrodelen-back-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      cnvos-dobrodelen-back-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.dobrodelen.si
      secretName: dobrodelen-back-nginx-tls
  rules:
    - host: files.dobrodelen.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dobrodelen-back-nginx
                port:
                  number: 80
